# support_chatbot

./: .gitignore  pyproject.toml
core/: app.py  config.py
core/services/bot/: agents.py  generics.py  hugging_face.py
models/: chat.py
routers/: chat.py
